tests/miniJava/pos/001265_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( new int [ 0 ] ) while ( 0 ) { } } }
