tests/miniJava/neg/006558_mutation.MiniJava
class java { public static void Main ( String [ ] int [] java ; java ) { { } } }
